DEX-24392 | fix: icon overlapping open mega menu

--- a/_src/blocks/phone-number-checker/phone-number-checker.css
+++ b/_src/blocks/phone-number-checker/phone-number-checker.css
@@ -321,7 +321,7 @@ main .section.phone-number-checker-container {
             top: 15px;
             right: 15px;
             cursor: pointer;
-            z-index: 9999;
+            z-index: 1;
         }
 
         .buttons-container {
